IA implementada para el funcionario